Tests/RunCMake/CommandLine/E_copy_directory-three-source-files-target-is-file-stderr.txt
^Error copying directory from "[^"]+" to "[^"]+file_for_test\.txt": File exists
Error copying directory from "[^"]+" to "[^"]+file_for_test\.txt": File exists
Error copying directory from "[^"]+" to "[^"]+file_for_test\.txt": File exists$
